Siderne sat sammen

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
         <a href="undersider/wine.html">THE WINE</a>
-        <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
-        <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
+        <a href="undersider/TheVinyard.html">THE VINEYARD</a>
+        <a href="undersider/slide.HTML">GALLERY</a>
         <a href="undersider/kontakt.html">CONTACT</a>
 
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
