--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -101,9 +101,10 @@
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="../index.html">HOME</a>
+        <a href="wine.html">THE WINE</a>
+        <a href="TheVinyard.html">THE VINEYARD</a>
+        <a href="slide.HTML">GALLERY</a>
         <a href="kontakt.html">CONTACT</a>
-
-
         <a href="#top" class="smoothScroll" onclick="closeNav()">TOP</a>
 
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
