--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -62,10 +62,12 @@
     <div class="overlay-content">
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
-        <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
-        <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
-        <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
-        <a href="../undersider/kontakt.html">CONTACT</a>
+        <a href="../index.html">HOME</a>
+        <a href="wine.html">THE WINE</a>
+        <a href="TheVinyard.html">THE VINEYARD</a>
+        <a href="slide.HTML">GALLERY</a>
+        <a href="kontakt.html">CONTACT</a>
+        <a href="#top" class="smoothScroll" onclick="closeNav()">TOP</a>
 
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
 
