Metatags og OG tilføjet - mangler stadig rettelser

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Fortæller det er html5 -->
+<!DOCTYPE html>
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
-<html lang="da" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <!-- I <head> har man opsætning - alt det som man ikke ser som selve indholdet -->
 <head>
@@ -15,6 +16,28 @@
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
+
+    <meta name="description" content="Dominio de Pontas fine wine for a new generation">
+    <!-- Max ca 170-200 karakterer - 600px -->
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <!-- Få unikke og relevante (Skal gå igen på siden)-->
+
+    <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
+    <meta property="og:title" content="RDominio de Pontas fine wine for a new generation">
+    
+    <meta property="og:type" content="website">
+    
+    <meta property="og:url" content="http://www.domain.dk">
+    
+    <meta property="og:image" content="https://www.domain.dk/Muscat-flaske.png">
+    
+    <meta property="og:description" content=
+            "Our Merlot and Muscat are two excellent spanish wines.
+            These two wines are made at our own winery. We only use the best grapes
+            from our own vineyard, to make this beautiful wine. Both our wines are great
+            for making sangria, but they are also very good on they own.">
+    
+    <meta property="og:locale" content="en_DK">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="css/hamburgers.css">
