--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -1,6 +1,7 @@
 <!-- Fortæller det er html5 -->
+<!DOCTYPE html>
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
-<html lang="da">
+<html lang="en">
 
 <!-- I <head> har man opsætning - alt det som man ikke ser som selve indholdet -->
 <head>
@@ -8,12 +9,32 @@
     <!-- Sætter tegnsætning til utf-8 som bl.a. tillader danske bogstaver -->
     <meta charset="utf-8">
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>The Vinyard</title>
+    <title>Dominio de Pontas | The Vinyard</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
+
+    <meta name="description" content="Dominio de Pontas information about our wineyard and the place our wine is made">
+    <!-- Max ca 170-200 karakterer - 600px -->
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <!-- Få unikke og relevante (Skal gå igen på siden)-->
+
+    <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
+    <meta property="og:title" content="Read about our wineyard">
+    
+    <meta property="og:type" content="website">
+    
+    <meta property="og:url" content="http://www.domain.dk">
+    
+    <meta property="og:image" content="https://www.domain.dk/img.jpg">
+    
+    <meta property="og:description" content=
+            "The vineyard is located in the northern Spain, in a wine area called Navarra.
+            Our wine is made with passion and can be ordered to Europe and the United States. ">
+    
+    <meta property="og:locale" content="en_DK">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="../css/hamburgers.css">
