--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -1,6 +1,7 @@
 <!-- Fortæller det er html5 -->
+<!DOCTYPE html>
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
-<html lang="da">
+<html lang="en">
 
 <!-- I <head> har man opsætning - alt det som man ikke ser som selve indholdet -->
 <head>
@@ -9,17 +10,19 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Sigende titel</title>
+    <title>Dominio de Pontas | Gallery</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
-    <meta name="description" content="Free Web tutorials">
+    <meta name="description" content="Dominio de Pontas Gallery">
     <!-- Max ca 170-200 karakterer - 600px -->
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
-    <meta property="og:title" content="titel">
+
+    <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
+    <meta property="og:title" content="Dominio de Pontas Gallery">
     
     <meta property="og:type" content="website">
     
@@ -27,9 +30,11 @@
     
     <meta property="og:image" content="https://www.domain.dk/img.jpg">
     
-    <meta property="og:description" content="Beskrivelse">
+    <meta property="og:description" content=
+            "We focus on fine wine and great design. Check out our gallery to see our
+            design on bottles and packaging.">
     
-    <meta property="og:locale" content="da_DK">
+    <meta property="og:locale" content="en_DK">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="../css/slide.css" rel="stylesheet" type="text/css">
