--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Fortæller det er html5 -->
+
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
-<html lang="da" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <!-- I <head> har man opsætning - alt det som man ikke ser som selve indholdet -->
 <head>
@@ -15,6 +16,29 @@
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
+
+    <!-- Titel som ses oppe i browserens tab mv. -->
+    <title>Contact Dominio de Pontas</title>
+
+    <meta name="description" content="Dominio de Pontas contact page">
+    <!-- Max ca 170-200 karakterer - 600px -->
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <!-- Få unikke og relevante (Skal gå igen på siden)-->
+
+    <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
+    <meta property="og:title" content="Get in touch with Dominio de Pontas">
+    
+    <meta property="og:type" content="website">
+    
+    <meta property="og:url" content="http://www.domain.dk">
+    
+    <meta property="og:image" content="https://www.domain.dk/img.jpg">
+    
+    <meta property="og:description" content=
+            "We focus on fine wine and great design. Check out our gallery to see our
+            design on bottles and packing.">
+    
+    <meta property="og:locale" content="en_DK">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="css/hamburgers.css">
