--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -1,5 +1,5 @@
 <!-- Fortæller det er html5 -->
-<!DOCTYPE html>
+
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
 <html lang="en">
 
@@ -228,7 +228,8 @@
             <span itemprop="telephone">20 30 20 30</span>
         </div>
 
-        <div class="contect_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fas fa-map-marker-alt"></i>
+        <div class="contect_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <i class="fas fa-map-marker-alt"></i>
             <span itemprop="streetAddress">Vej 3</span>,
             <span itemprop="addressLocality">Byispanien, spanien</span>
         </div>
