--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!--- HEADER ------->
     <div class="header forside">
-        
+
 
 
         <a name="top"></a>
@@ -143,16 +143,16 @@
     <div class="vinen-tekst">
         <div class="overlayfarvered">
 
-        <h2>this wine is fine</h2>
-        <p>Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.</p>
+            <h2>this wine is fine</h2>
+            <p>Here at Dominio de Pontas great wine is made. We strive to make great Spanish wine at our winery in Navarra. We produce two kinds of red wine; one is a sweet Merlot and the other is a refreshing Muscat. These two red wines are great on their own, but even better as sangria.To read more about our wines, click the button below.</p>
 
-         <div class="knapper">
+            <div class="knapper">
 
-            <div class="ghost-button" onclick="wineMerlot()" >MERLOT</div>
+                <div class="ghost-button" onclick="wineMerlot()" >MERLOT</div>
 
-            <div class="ghost-button"  onclick="wineMuscat()" >MUSCAT</div>
+                <div class="ghost-button"  onclick="wineMuscat()" >MUSCAT</div>
 
-         </div>
+            </div>
 
         </div>
     </div>
@@ -167,7 +167,8 @@
     <div class="gaarden-beskrivelse">
         <h2 style="text-align: center"> Dominio <span class="red" style="font-size: 30px">de</span> Pontas</h2>
 
-        <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
+
+        <p>Dominio de Pontas was founded in 2017 by 2 Danes, Peter and Mads. They both shared the same vision, and that was to create wine. Before they could do that, they had to buy a winery. That is the reason why they travelled to Navarra, where the best Spanish wines are made. In Spain, they fell in love with a traditional Spanish winery which they named Dominio De Pontas.Ever since then, they have been making great Spanish wine.</p>
 
 
 
@@ -176,7 +177,6 @@
 
 
 </section>
-
 <!---instagram----->
 <section class="grid instagram">
 
@@ -184,7 +184,7 @@
 
         <div class="overlayfarvewhite">
 
-        <h1 class="h1hojde"><span class="red">13k</span></h1>
+            <h1 class="h1hojde"><span class="red">13k</span></h1>
 
             <div class="sort">
 
@@ -230,14 +230,15 @@
 
     <div class="stedet-beskrivelse">
         <h1>The best place to make <span class="red">wine</span></h1>
-        <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
+        <p>Dominio De Pontas is located in the wine area Navarra, Spain. The vineyard is 25 acres and the grapes grow in good climate.<br>
+            Among other things, Navarra is known for its high quality red wines. </p>
     </div>
 
     <div class="stedet-boks mobil">
 
     </div>
 
-</boks>
+    </boks>
 
 
 </section>
@@ -292,9 +293,9 @@
     <div class="getintouch">Follow us</div>
 
     <div class="SoMe">
-    <div class="SoMe_icon"> <i class="fab fa-facebook-square fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fab fa-facebook-square fa-2x"></i> </div>
 
-    <div class="SoMe_icon"> <i class="fab fa-instagram fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fab fa-instagram fa-2x"></i> </div>
     </div>
 
 </footer>
