--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -58,9 +58,9 @@
 
             $(".merlot").click(function(){
                 $("#theGrape").text("How is our Merlot wine made");
-                $("#theGrapetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theGrapetekst").text("The process of making our Merlot wine starts with the grape. In the summer we handpick our grapes and ship them to our winery. The grapes are then crushed, using traditional methods that preserve the sweetness. The crushed Merlot grapes are then placed in Spanish wine barrels. Here, the wine will ferment for 6 weeks. The wine is then bottled and shipped to our customers.");
                 $("#theWine").text("About the grape");
-                $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theWinetekst").text("Merlot is a soft, ripe and elegant grape. Merlot wines are easy to drink, they go well on their own, as well as sangria. Merlot is traditionally used to make French wines, but in the last 20 years it has become more common in Spanish vineyards.");
                 $('.flasken').fadeTo( 1, 1, function()
                 {
                     $(this).css('background-image', "url(\"../images/merlot-falske.jpg\")");
@@ -80,9 +80,9 @@
             });
             $(".muscat").click(function(){
                 $("#theGrape").text("How is our Muscat wine made");
-                $("#theGrapetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theGrapetekst").text("The process of making our Muscat wine starts with the grape. In the summer we handpick our grapes and ship them to our winery. The grapes are then crushed, using traditional methods that preserve the sweetness. The crushed Muscat grapes are then placed in Spanish wine barrels. Here, the wine will ferment for 6 weeks. The wine is then bottled and shipped to our customers.");
                 $("#theWine").text("About the grape");
-                $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theWinetekst").text("Muscat is a soft, ripe and elegant grape. Muscat wines are easy to drink, they go well on their own, as well as sangria. Muscat is traditionally used to make French wines, but in the last 20 years it has become more common in Spanish vineyards.");
 
 
                 $('.flasken').fadeTo(1, 1, function()
@@ -183,8 +183,8 @@
 
 <section class="grid ourWines">
     <div class="omVinen">
-        <h2>Our Wines</h2>
-        <p>Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.</p>
+        <h2>The red wines</h2>
+        <p>Our Merlot and Muscat are two excellent Spanish wines. These two wines are made at our own winery. We only use the best grapes from our own vineyard, to make this amazing wine. The wines are great for making sangria, but they are also very good on their own.</p>
 
         <div class="knapper">
 
