--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -148,13 +148,15 @@
 <section class="grid gaarden2">
     <div class="gaarden-beskrivelse2">
         <h2 style="text-align: center"><span class="red" style="font-size: 70px">The Vinyard</span></h2>
-        <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
+        <p>Dominio de Pontas wines are for people who appreciate red wine, but also value great design. We believe in quality over quantity, which is why our Merlot and Muscat wines are rich in flavor – This is also something we focus on, in terms of our design and packaging. The vineyard is located in Northern Spain, in a wine area called Navarra. Our wine is made with passion and can be ordered to Europe and the United States.</p>
     </div>
 
 
 
     <div id="readmore" class="ghost-button readmore">READ MORE</div>
-    <div id="more" class="more">Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</div>
+    <div id="more" class="more">We take our customers very seriously and with great care, and try to provide our best service. The satisfaction of our customers is a high priority in our foundation. We want to give you a taste of good service, and an even better taste of our wine, so that you will be left with an unforgettable experience.
+
+    </div>
     <div id="readless" class="ghost-button readless">READ LESS</div>
 
     <style>
