--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -125,7 +125,13 @@
 
 <section>
     <br>
-<div class="h1"><h1>Dominio de Pontas Gallery</h1></div>
+<div class="h1"><h2>Gallery</h2></div>
+
+<div class="galleritekst"><p>In this gallery, you can see the packaging and design for our Merlot and Muscat wines. <br>
+    Our wines are made for people, who may not know much about wine, but can recognize good design when they see it.</p>
+</div>
+
+
 
     <br>
 
