--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Titel som ses oppe i browserens tab mv. -->
     <title>Contact Dominio de Pontas</title>
 
-    <meta name="description" content="Dominio de Pontas contact page">
+    <meta name="description" content="Dominio de Pontas - wine for a new generation.">
     <!-- Max ca 170-200 karakterer - 600px -->
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
