metatags og OG opdaterede

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <meta name="description" content="Dominio de Pontas - wine for a new generation.">
     <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="keywords" content="great spanish wine,red wine,sangria,winery,wine">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
-    <meta property="og:title" content="Get in touch with Dominio de Pontas">
+    <meta property="og:title" content="Dominio de Pontas">
     
     <meta property="og:type" content="website">
     
@@ -35,10 +35,9 @@
     <meta property="og:image" content="https://www.domain.dk/img.jpg">
     
     <meta property="og:description" content=
-            "We focus on fine wine and great design. Check out our gallery to see our
-            design on bottles and packing.">
+            "Here at Dominio de Pontas great wine is made. We strive to make great Spanish wine at our winery in Navarra. Visit our website to read more.">
     
-    <meta property="og:locale" content="en_DK">
+    <meta property="og:locale" content="en_ES">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="css/hamburgers.css">
