--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -19,7 +19,7 @@
 
     <meta name="description" content="Dominio de Pontas contact page">
     <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="keywords" content="get in touch,Contact,Dominio de Pontas,wine">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
@@ -32,10 +32,9 @@
     <meta property="og:image" content="https://www.domain.dk/img.jpg">
     
     <meta property="og:description" content=
-            "We focus on fine wine and great design. Check out our gallery to see our
-            design on bottles and packing.">
+            "We focus on fine wine and great design. Contact us if you wan't to know more.">
     
-    <meta property="og:locale" content="en_DK">
+    <meta property="og:locale" content="en_ES">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="../css/hamburgers.css">
