--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -17,13 +17,13 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
 
-    <meta name="description" content="Dominio de Pontas contact page">
+    <meta name="description" content="Dominio de Pontas gallery">
     <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="keywords" content="muscat,merlot,wine for beginners">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
-    <meta property="og:title" content="Get in touch with Dominio de Pontas">
+    <meta property="og:title" content="Amazing design for amazing wine.">
     
     <meta property="og:type" content="website">
     
@@ -33,9 +33,9 @@
     
     <meta property="og:description" content=
             "We focus on fine wine and great design. Check out our gallery to see our
-            design on bottles and packing.">
+            design on bottles and packaging.">
     
-    <meta property="og:locale" content="en_DK">
+    <meta property="og:locale" content="en_ES">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="../css/slide.css" rel="stylesheet" type="text/css">
@@ -128,7 +128,7 @@
 <div class="h1"><h2>Gallery</h2></div>
 
 <div class="galleritekst"><p>In this gallery, you can see the packaging and design for our Merlot and Muscat wines. <br>
-    Our wines are made for people, who may not know much about wine, but can recognize good design when they see it.</p>
+    Wine for beginners, who may not know much about wine, but can recognize good design when they see it.</p>
 </div>
 
 
