--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -17,27 +17,24 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
 
-    <meta name="description" content="Dominio de Pontas about our wine, our design and how we make our wine">
+    <meta name="description" content="About our wine">
     <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="Muscat,Merlot,Winery,Beautiful,Spanish,Wine">
+    <meta name="keywords" content="Muscat,Merlot,Winery,Spanish,Wine">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
-    <meta property="og:title" content="Get to know our Muscat and Merlot wines">
+    <meta property="og:title" content="Get to know more about our Muscat and Merlot wines">
     
     <meta property="og:type" content="website">
     
     <meta property="og:url" content="http://www.domain.dk">
     
-    <meta property="og:image" content="https://www.domain.dk/Muscat-flaske.png">
+    <meta property="og:image" content="https://www.domain.dk//images/Muscat-flaske.png">
     
     <meta property="og:description" content=
-            "Our Merlot and Muscat are two excellent spanish wines.
-            These two wines are made at our own winery. We only use the best grapes
-            from our own vineyard, to make this beautiful wine. Both our wines are great
-            for making sangria, but they are also very good on they own.">
+            "Get to know how our Merlot and Muscat wines are made and a little bit about the grapes.">
     
-    <meta property="og:locale" content="en_DK">
+    <meta property="og:locale" content="en_ES">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="../css/hamburgers.css">
