--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -17,13 +17,13 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
 
-    <meta name="description" content="Dominio de Pontas information about our wineyard and the place our wine is made">
+    <meta name="description" content="Dominio de Pontas information about our vineyard and the place our wine is made">
     <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="keywords" content="wine,red wine,vineyard">
     <!-- Få unikke og relevante (Skal gå igen på siden)-->
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
-    <meta property="og:title" content="Read about our wineyard">
+    <meta property="og:title" content="Read about our vineyard in Spain">
     
     <meta property="og:type" content="website">
     
@@ -32,10 +32,10 @@
     <meta property="og:image" content="https://www.domain.dk/img.jpg">
     
     <meta property="og:description" content=
-            "The vineyard is located in the northern Spain, in a wine area called Navarra.
+            "The vineyard is located in the Northern Spain, in a wine area called Navarra.
             Our wine is made with passion and can be ordered to Europe and the United States. ">
     
-    <meta property="og:locale" content="en_DK">
+    <meta property="og:locale" content="en_ES">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="../css/hamburgers.css">
