--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -42,6 +42,7 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/75970a48c3.js"></script>
     <script src="../javascript/script.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -147,7 +148,7 @@
 <a name="thevinyard"></a>
 <section class="grid gaarden2">
     <div class="gaarden-beskrivelse2">
-        <h2 style="text-align: center"><span class="red" style="font-size: 70px">The Vinyard</span></h2>
+        <h2 style="text-align: center"><span class="red" style="font-size: 30px">The Vinyard</span></h2>
         <p>Dominio de Pontas wines are for people who appreciate red wine, but also value great design. We believe in quality over quantity, which is why our Merlot and Muscat wines are rich in flavor – This is also something we focus on, in terms of our design and packaging. The vineyard is located in Northern Spain, in a wine area called Navarra. Our wine is made with passion and can be ordered to Europe and the United States.</p>
     </div>
 
