--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -27,9 +27,9 @@
     
     <meta property="og:type" content="website">
     
-    <meta property="og:url" content="http://www.domain.dk">
+    <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.domain.dk/img.jpg">
+    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "We focus on fine wine and great design. Check out our gallery to see our
