--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -27,9 +27,9 @@
     
     <meta property="og:type" content="website">
     
-    <meta property="og:url" content="http://www.domain.dk">
+    <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.domain.dk/img.jpg">
+    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "The vineyard is located in the Northern Spain, in a wine area called Navarra.
@@ -182,19 +182,20 @@
 
 <!--- footer------>
 
-<footer class="grid footer">
+<footer class="grid footer" itemscope itemtype="http://schema.org/LocalBusiness">
     <a name="footer"></a>
     <h1 class="contact_footer">contact</h1>
 
     <div class="getintouch">Get in touch</div>
 
-    <div class="contact_flex" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+    <div class="contact_flex">
 
-        <div class="contect_info"><i class="fa fa-phone" data-fa-transform="rotate-90"></i>
+        <div class="contect_info"><i class="fas fa-phone" data-fa-transform="rotate-90"></i>
             <span itemprop="telephone">20 30 20 30</span>
         </div>
 
-        <div class="contect_info"><i class="fas fa-map-marker-alt"></i>
+        <div class="contect_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <i class="fas fa-map-marker-alt"></i>
             <span itemprop="streetAddress">Vej 3</span>,
             <span itemprop="addressLocality">Byispanien, spanien</span>
         </div>
@@ -202,6 +203,7 @@
         <div class="contect_info"><i class="far fa-envelope"></i>
             <span itemprop="email">Contact@pontas.com</span>
         </div>
+
     </div>
 
     <div class="getintouch">Follow us</div>
