--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -27,9 +27,9 @@
     
     <meta property="og:type" content="website">
     
-    <meta property="og:url" content="http://www.domain.dk">
+    <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.domain.dk//images/Muscat-flaske.png">
+    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "Get to know how our Merlot and Muscat wines are made and a little bit about the grapes.">
