--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "Here at Dominio de Pontas great wine is made. We strive to make great Spanish wine at our winery in Navarra. Visit our website to read more.">
