--- a/undersider/TheVinyard.html
+++ b/undersider/TheVinyard.html
@@ -29,7 +29,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "The vineyard is located in the Northern Spain, in a wine area called Navarra.
