--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -29,7 +29,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="https://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
     
     <meta property="og:description" content=
             "We focus on fine wine and great design. Check out our gallery to see our
