--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -29,7 +29,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.jpg">
     
     <meta property="og:description" content=
             "We focus on fine wine and great design. Check out our gallery to see our
@@ -139,13 +139,13 @@
     <br>
 
 <div id="mobilSlideshow">
-    <img src="../images/brochure.png" id="first" class="active"/>
-    <img src="../images/merlotnavn.png"/>
-    <img src="../images/muscatnavn.png"/>
-    <img src="../images/merlotflaske.png"/>
-    <img src="../images/muscatflaske.png"/>
-    <img src="../images/merlotkasse.png"/>
-    <img src="../images/muscatkasse.png" id="last"/>
+    <img src="../images/brochure.jpg" id="first" class="active"/>
+    <img src="../images/merlotnavn.jpg"/>
+    <img src="../images/muscatnavn.jpg"/>
+    <img src="../images/merlotflaske.jpg"/>
+    <img src="../images/muscatflaske.jpg"/>
+    <img src="../images/merlotkasse.jpg"/>
+    <img src="../images/muscatkasse.jpg" id="last"/>
 
 
 <!--Dette er knapper. Disse bruges til at køre frem og tilbage i slideshowet-->
