--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -52,7 +52,7 @@
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</head>¢
+</head>
 
 <!-- i <body> har man alt indhold på siden -->
 <body>
