--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -29,7 +29,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.jpg">
     
     <meta property="og:description" content=
             "Get to know how our Merlot and Muscat wines are made and a little bit about the grapes.">
@@ -65,11 +65,11 @@
 
                 $('.baggrund1').fadeTo( 1, 1, function()
                 {
-                    $(this).css('background-image', "url(\"../images/stedet.png\")");
+                    $(this).css('background-image', "url(\"../images/stedet.jpg\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund2').fadeTo( 1, 1, function() {
-                    $(this).css('background-image', "url(\"../images/croks.jpeg\")");
+                    $(this).css('background-image', "url(\"../images/croks.jpg\")");
                 }).fadeTo('fast', 1);
 
                 $(".theGrape").slideDown();
@@ -84,16 +84,16 @@
 
                 $('.flasken').fadeTo(1, 1, function()
                 {
-                    $(this).css('background-image', "url(\"../images/Muscat-flaske.png\")");
+                    $(this).css('background-image', "url(\"../images/Muscat-flaske.jpg\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund1').fadeTo(1, 1, function()
                 {
-                    $(this).css('background-image', "url(\"../images/instagramfoto3.jpeg\")");
+                    $(this).css('background-image', "url(\"../images/instagramfoto3.jpg\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund2').fadeTo(1, 1, function() {
-                    $(this).css('background-image', "url(\"../images/croks.jpeg\")");
+                    $(this).css('background-image', "url(\"../images/croks.jpg\")");
                 }).fadeTo('slow', 1);
 
                 $(".theGrape").slideDown();
