--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -29,7 +29,7 @@
     
     <meta property="og:url" content="http://www.cilsoee.dk">
     
-    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.png">
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.jpg">
     
     <meta property="og:description" content=
             "We focus on fine wine and great design. Contact us if you wan't to know more.">
