--- a/undersider/slide.HTML
+++ b/undersider/slide.HTML
@@ -139,13 +139,13 @@
     <br>
 
 <div id="mobilSlideshow">
-    <img src="../images/brochure.jpg" id="first" class="active"/>
-    <img src="../images/merlotnavn.jpg"/>
-    <img src="../images/muscatnavn.jpg"/>
-    <img src="../images/merlotflaske.jpg"/>
-    <img src="../images/muscatflaske.jpg"/>
-    <img src="../images/merlotkasse.jpg"/>
-    <img src="../images/muscatkasse.jpg" id="last"/>
+    <img alt="Our wine brochure" src="../images/brochure.jpg" id="first" class="active"/>
+    <img alt="Label for the merlot wine" src="../images/merlotnavn.jpg"/>
+    <img alt="Label for the merlot wine" src="../images/muscatnavn.jpg"/>
+    <img alt="The Merlot red wine on a grey background" src="../images/merlotflaske.jpg"/>
+    <img alt="The Muscat red wine on a grey background" src="../images/muscatflaske.jpg"/>
+    <img alt="The box for our Merlot red wine on a grey background" src="../images/merlotkasse.jpg"/>
+    <img alt="The box for our Muscat red wine on a grey background" src="../images/muscatkasse.jpg" id="last"/>
 
 
 <!--Dette er knapper. Disse bruges til at køre frem og tilbage i slideshowet-->
